# bazel_cross_compilation

./: .gitattributes  .gitignore  BUILD.bazel  LICENSE  WORKSPACE
.github/workflows/: main.yml
cpp/hello_world/: BUILD.bazel
libc/: BUILD.bazel
rust/: Cargo.toml
rust/pure_rust_example/: BUILD.bazel  Cargo.toml
sysroot/: BUILD.bazel
toolchains/: BUILD.bazel  cpp_toolchains.bzl
