platform(
  name = "x86_64-linux",
  constraint_values = [
    "@platforms//cpu:x86_64",
    "@platforms//os:linux",
  ],
)

platform(
  name = "armv7-linux-musleabihf",
  constraint_values = [
    "@platforms//cpu:armv7",
    "@platforms//os:linux",
  ],
)

platform(
  name = "aarch64-linux-musl",
  constraint_values = [
    "@platforms//cpu:aarch64",
    "@platforms//os:linux",
  ],
)