constraint_setting(
  name = "libc_version",
  default_constraint_value = "gnu",
)

constraint_value(
    name = "musl",
    constraint_setting = ":libc_version",
)

platform(
  name = "x86_64-linux-musl",
  constraint_values = [
    "@platforms//cpu:x86_64",
    "@platforms//os:linux",
    ":musl",
  ],
)

platform(
  name = "armv7-linux-musleabihf",
  constraint_values = [
    "@platforms//cpu:armv7",
    "@platforms//os:linux",
    ":musl",
  ],
)

platform(
  name = "aarch64-linux-musl",
  constraint_values = [
    "@platforms//cpu:aarch64",
    "@platforms//os:linux",
    ":musl",
  ],
)