platform(
  name = "x86_64-linux-musl",
  constraint_values = [
    "@platforms//cpu:x86_64",
    "@platforms//os:linux",
  ],
)

platform(
  name = "armv7-linux-musleabihf",
  constraint_values = [
    "@platforms//cpu:armv7",
    "@platforms//os:linux",
  ],
)

platform(
  name = "aarch64-linux-musl",
  constraint_values = [
    "@platforms//cpu:aarch64",
    "@platforms//os:linux",
    "//libc:musl",
    "//sysroot:unknown",
  ],
)

platform(
  name = "aarch64-linux-gnu",
  constraint_values = [
    "@platforms//cpu:aarch64",
    "@platforms//os:linux",
    "//libc:gnu",
  ],
)

constraint_value(
  name = "mipsel",
  constraint_setting = "@platforms//cpu:cpu",
  visibility = [
    "//visibility:public",
  ],
)

platform(
  name = "mipsel-linux-musl",
  constraint_values = [
    ":mipsel",
    "@platforms//os:linux",
    "//libc:musl",
    "//sysroot:unknown",
  ],
)
